# build_analyzer

./: CMakeLists.txt  README.md  analyze.py
src/: config.cpp  config.h  main.cpp
src/analyze/: analyzer.h  build_analyzer.cpp  build_analyzer.h  source_analyzer.cpp  source_analyzer.h  total_analyzer.h  valueless_analyzer.h
src/events/: event.h  event_type.cpp  event_type.h
src/file_system/: file_finder.h  file_reader.cpp  file_reader.h  json_file_finder.h
src/parser/: parser.cpp  parser.h
